force-app/main/default/objects/Lot_Line_Items__c/Lot_Line_Items__c.object-meta.xml
<CustomObject>
    <description>This object is used to track the line level details of each item within a lot.</description>
    <label>Lot Line Items</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Lot Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lot Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>