force-app/main/default/objects/Lot_Line_Items__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <description>Records the arrival date of the lot line item.</description>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>