force-app/main/default/objects/Lot_Line_Items__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <description>Indicates the availability status of the lot line item.</description>
    <defaultValue>true</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>