force-app/main/default/objects/Lot_Line_Items__c/fields/Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date__c</fullName>
    <description>Captures the expiry date of the lot line item.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>