force-app/main/default/objects/Lot_Line_Items__c/fields/In_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>In_Maintenance__c</fullName>
    <description>Flags whether the lot line item is currently in maintenance.</description>
    <defaultValue>false</defaultValue>
    <label>In Maintenance</label>
    <type>Checkbox</type>
</CustomField>