force-app/main/default/objects/Lot_Line_Items__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>Represents the name of the item associated with the lot line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Name</label>
    <referenceTo>Lot_Item__c</referenceTo>
    <relationshipLabel>Lot Line Items</relationshipLabel>
    <relationshipName>Lot_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>