force-app/main/default/objects/Lot_Line_Items__c/fields/Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Date__c</fullName>
    <description>Captures the date when maintenance is scheduled for the lot line item.</description>
    <label>Maintenance Date</label>
    <type>Date</type>
</CustomField>