force-app/main/default/objects/Lot_Line_Items__c/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <description>Associates the lot line item with a specific order line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Item</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Lot Line Items</relationshipLabel>
    <relationshipName>Lot_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>