force-app/main/default/objects/Lot_Line_Items__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <description>Stores the serial number associated with the lot line item.</description>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>