force-app/main/default/objects/Lot_Line_Items__c/validationRules/maintenance_and_available_cant_be_true.validationRule-meta.xml
<ValidationRule>
    <fullName>maintenance_and_available_cant_be_true</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    In_Maintenance__c,
    Available__c
)</errorConditionFormula>
    <errorMessage>Available and In maintenance cannot be true at the same time.</errorMessage>
</ValidationRule>